Fixed overlap of close and add button of todo

--- a/styles.css
+++ b/styles.css
@@ -161,3 +161,6 @@ input[type=text] {
 	visibility: hidden;
 	background-color: rgba(200, 200, 200, 0.2);
 }
+#add {
+	margin-right: 50px;
+}
